--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 -f https://download.pytorch.org/whl/torch_stable.html
-torch==1.8.1+cpu 
-torchvision==0.9.1+cpu
+torch==1.7.0+cpu 
+torchvision==0.8.1+cpu
 starlette
 uvicorn
 python-multipart
@@ -9,6 +9,7 @@ aiohttp
 jinja2
 numpy
 pillow
-fastai
-fastcore
-fastprogress
+fastai==2.3.0
+fastcache==1.1.0
+fastcore==1.3.20
+fastprogress==1.0.0
